--- a/project pemweb (2)/index.html
+++ b/project pemweb (2)/index.html
@@ -56,7 +56,7 @@
             </div>
         </div>
     </nav>
-    <div class="hero-section">
+    <div class="hero-section" id="Home">
         <img src="c:\Users\ammar falah\OneDrive\Documents\Project Pemweb\istockphoto-1411029939-612x612.jpg"/>
         <div class="hero-text">
             <h1></h1>
@@ -68,13 +68,13 @@
         <h2>Home</h2>
         <p>Selamat datang di Perpustakaan Omah. Di sini Anda dapat menemukan banyak koleksi buku dan sumber daya untuk membantu studi dan penelitian Anda. Jelajahi koleksi kami dan manfaatkan layanan kami.</p>
     </div>
-    <div class="section bg-light">
+    <div class="section bg-light" id="About us">
         <div class="container">
             <h2>Tentang kita</h2>
             <p>Perpustakaan Omah berdedikasi untuk menyediakan koleksi buku dan sumber daya yang komprehensif untuk mendukung kebutuhan pendidikan dan penelitian komunitas kami. Misi kami adalah menumbuhkan kecintaan membaca dan pembelajaran seumur hidup.</p>
         </div>
     </div>
-    <div class="section">
+    <div class="section" >
         <div class="container">
             <h2>Layanan kami</h2>
             <div class="row">
@@ -129,7 +129,7 @@
             </form>
         </div>
     </div>
-    <div class="section">
+    <div class="section" id="Keunggulan Web">
         <div class="container">
             <h2>Keunggulan Web</h2>
             <div class="row">
@@ -163,7 +163,7 @@
             </div>
         </div>
     </div>
-    <div class="section bg-light">
+    <div class="section bg-light" id="Pendaftaran">
         <div class="container">
             <h2>Pendaftaran</h2>
             <form>
@@ -187,7 +187,7 @@
             </form>
         </div>
     </div>
-    <div class="section">
+    <div class="section" id="Koleksi Buku">
         <div class="container">
             <h2>Koleksi Buku</h2>
             <div class="row">
@@ -268,6 +268,49 @@
             </div>
         </div>
     </div>
+
+    <div class="section bg-light" id="Kontak">
+        <div class="container">
+            <h2>Kontak Kami</h2>
+            <p>Jika Anda memiliki pertanyaan atau ingin menghubungi kami, berikut adalah cara-cara yang dapat Anda gunakan:</p>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card">
+                        <div class="card-body text-center">
+                            <h3 class="card-title">WhatsApp</h3>
+                            <p>Hubungi kami melalui WhatsApp untuk pertanyaan cepat.</p>
+                            <a href="https://wa.me/1234567890" target="_blank" class="btn btn-success">
+                                <i class="fab fa-whatsapp"></i> Chat di WhatsApp
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                        <div class="card-body text-center">
+                            <h3 class="card-title">Instagram</h3>
+                            <p>Ikuti kami di Instagram untuk pembaruan terbaru.</p>
+                            <a href="https://www.instagram.com/omahlibrary" target="_blank" class="btn btn-danger">
+                                <i class="fab fa-instagram"></i> Follow di Instagram
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                        <div class="card-body text-center">
+                            <h3 class="card-title">Email</h3>
+                            <p>Kirim email kepada kami untuk pertanyaan lebih lanjut.</p>
+                            <a href="mailto:info@omahlibrary.com" class="btn btn-primary">
+                                <i class="fas fa-envelope"></i> Kirim Email
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
     <div class="footer">
         <p>&Copy; Perpustakaan Omah 2025. Semua hak dilindungi undang-undang</p>
     </div>
